begin adding content to sections and basic styling

--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <script src="https://kit.fontawesome.com/62bfe3842b.js" crossorigin="anonymous"></script>
     <title>Aaron Long Portfolio</title>
 </head>
+
 <body>
-    
+    <div class="grid-container">
+        <nav id="navbar">
+            <ul>
+                <li><a href=#welcome-section>About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <section id="welcome-section">
+            <h1>Aaron Long</h1>
+            <p>Front-End Web Developer</p>
+            <div class="social">
+                <a href="https://github.com/aaronlng" target="_blank" id="profile-link" class="social-links"><i
+                        class="fab fa-github"></i>GitHub</a>
+                <a href="https://www.linkedin.com/in/aaronlng/" target="_blank" class="social-links"><i
+                        class="fab fa-linkedin"></i>LinkedIn</a>
+                <a href="https://drive.google.com/file/d/1YseoBpkUfLareOOy-8pnLox-zTSWFHBH/view?usp=sharing" target="_blank" class="social-links"><i
+                        class="far fa-file-alt"></i>Resume</a>
+            </div>
+        </section>
+        <section id="projects">
+            <div class="project-block">
+                <img src="#">
+                <a href="https://www.aaronlng.dev/tribute-page/">Tribute Page</a>
+                <a href="https://github.com/aaronlng/tribute-page">GitHub</a>
+            </div>
+        </section>
+    </div>
 </body>
+
 </html>
