update nav-list for flex

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="grid-container">
         <nav id="navbar">
-            <ul>
+            <ul class="nav-list">
                 <li><a href=#welcome-section>About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
