add media query for user stories

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </section>
         <section id="projects">
-            <div class="project-block">
+            <div class="project-tile">
                 <img src="#">
                 <a href="https://www.aaronlng.dev/tribute-page/">Tribute Page</a>
                 <a href="https://github.com/aaronlng/tribute-page">GitHub</a>
