--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </section>
         <section id="projects">
             <div class="project-tile">
-                <img src="#">
-                <a href="https://www.aaronlng.dev/tribute-page/">Tribute Page</a>
-                <a href="https://github.com/aaronlng/tribute-page">GitHub</a>
+                <img src="assets/images/tribute-page.png" alt="Tribute Page Image">
+                <a href="https://www.aaronlng.dev/tribute-page/" class="demo">Tribute Page</a>
+                <a href="https://github.com/aaronlng/tribute-page" class="code">GitHub</a>
             </div>
         </section>
     </div>
