--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
                 <a href="https://www.aaronlng.dev/tribute-page/" class="demo">Tribute Page</a>
                 <a href="https://github.com/aaronlng/tribute-page" class="code">GitHub</a>
             </div>
+            <div class="project-tile">
+                <img src="assets/images/survey-form.png" alt="Tribute Page Image">
+                <a href="https://www.aaronlng.dev/survey-form/" class="demo">Tribute Page</a>
+                <a href="https://github.com/aaronlng/survey-form" class="code">GitHub</a>
+            </div>
+            <div class="project-tile">
+                <img src="assets/images/tribute-page.png" alt="Tribute Page Image">
+                <a href="https://www.aaronlng.dev/tribute-page/" class="demo">Tribute Page</a>
+                <a href="https://github.com/aaronlng/tribute-page" class="code">GitHub</a>
+            </div>
         </section>
     </div>
 </body>
