--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                 <a href="https://github.com/aaronlng/tribute-page" class="code">GitHub</a>
             </div>
             <div class="project-tile">
-                <img src="assets/images/survey-form.png" alt="Tribute Page Image">
-                <a href="https://www.aaronlng.dev/survey-form/" class="demo">Tribute Page</a>
+                <img src="assets/images/survey-form.png" alt="Survey Form Image">
+                <a href="https://www.aaronlng.dev/survey-form/" class="demo">Survey Form</a>
                 <a href="https://github.com/aaronlng/survey-form" class="code">GitHub</a>
             </div>
             <div class="project-tile">
-                <img src="assets/images/tribute-page.png" alt="Tribute Page Image">
-                <a href="https://www.aaronlng.dev/tribute-page/" class="demo">Tribute Page</a>
-                <a href="https://github.com/aaronlng/tribute-page" class="code">GitHub</a>
+                <img src="assets/images/product-landing-page.png" alt="Product Landing Page Image">
+                <a href="https://www.aaronlng.dev/product-landing-page/" class="demo">Product Landing Page</a>
+                <a href="https://github.com/aaronlng/product-landing-page" class="code">GitHub</a>
             </div>
         </section>
     </div>
