--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/mobile.css">
+    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/62bfe3842b.js" crossorigin="anonymous"></script>
     <title>Aaron Long Portfolio</title>
 </head>
