create stylesheet for mid sized screens

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="assets/css/mobile.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/tablet.css">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/62bfe3842b.js" crossorigin="anonymous"></script>
     <title>Aaron Long Portfolio</title>
