create footer section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <a href="https://github.com/aaronlng/product-landing-page" class="code">GitHub</a>
             </div>
         </section>
+        <footer id="footer">
+            <p>&copy;Aaron Long 2020</p>
+        </footer>
     </div>
 </body>
 
